books_authorization_policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: books-policy
  namespace: default
spec:
  selector:
    matchLabels:
      app: books-information
  action: DENY
  rules:
    - to:
        - operation:
            paths: 
              - "/books*"
              - "/books/*/reviews*"
      when:
        - key: request.auth.claims[resource_access][Istio][roles]
          notValues: ["admin"]
