policy_editor_authorization_policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: policy-editor-access
  namespace: default
spec:
  selector:
    matchLabels:
      app: webserver
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET", "POST"]
        paths: ["/policy/*", "/api/permissions", "/api/permissions/*"]
    when:
    - key: request.auth.claims[resource_access][Istio][roles]
      values: ["admin"]
