reviews_authorization_policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: reviews-policy
  namespace: default
spec:
  selector:
    matchLabels:
      app: books-information
  action: DENY
  rules:
    - to:
        - operation:
            paths: ["/books/*/reviews*"]
